--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "reselect": ">=3.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
