--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "rrnotify",
   "version": "0.0.1",
   "description": "Good enough notifications for react-redux apps.",
-  "main": "index.js",
+  "main": "duck/index.js",
   "scripts": {
+    "postinstall": "`# Install package for sample component` cd Notifier && npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "git@github.com:jeremyosborne/rrnotify.git"
   },
   "keywords": [
     "react",
@@ -29,6 +34,7 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-standard": "^3.1.0",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "stylelint": "^9.2.1"
   }
 }
