--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,12 @@
 {
   "presets": [
-    "env",
+    ["env", {"modules": false}],
     "stage-0",
     "react",
   ],
-  "plugins": [],
+  "plugins": [
+    /* "external-helpers", */
+  ],
   "env": {
     "development": {},
     "production": {},
