--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "rrnotify",
   "version": "0.0.1",
   "description": "Good enough notifications for react-redux apps.",
-  "main": "dist/duck/index.js",
+  "main": "index.js",
   "scripts": {
-    "build": "`# Building commonjs modules and placing in dist:`rimraf dist && mkdirp dist/duck && babel duck -d dist/duck && mkdirp Notifier && babel Notifier --ignore Notifier/node_modules -d dist/Notifier",
-    "postinstall": "`# Install package for sample component if you want to with: cd Notifier && npm install`",
+    "build": "`# Build our code for publishing` rollup -c && copy package.json dist",
+    "storybook": "`# Sample component integration` start-storybook -p 9001 -c .storybook",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,26 +20,44 @@
   "author": "Jeremy Osborne <jeremywosborne@gmail.com>",
   "license": "ISC",
   "peerDependencies": {
+    "react": ">=16.4.1",
+    "react-dom": ">=16.4.1",
+    "react-redux": ">=5.0.7",
+    "redux": ">=4.0.0",
     "reselect": ">=3.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.3",
+    "babel-eslint": "^8.2.5",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "copy": "^0.3.2",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
     "mkdirp": "^0.5.1",
-    "react": "^16.4.0",
+    "postcss-modules": "^1.1.0",
+    "postcss-syntax": "^0.31.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "reselect": "^3.0.1",
     "rimraf": "^2.6.2",
-    "stylelint": "^9.2.1"
+    "rollup": "^0.62.0",
+    "rollup-plugin-analyzer": "^2.0.3",
+    "rollup-plugin-auto-external": "^1.2.0",
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-postcss": "^1.6.2",
+    "stylelint": "^9.3.0"
   }
 }
