--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "author": "Jeremy Osborne <jeremywosborne@gmail.com>",
   "license": "ISC",
   "peerDependencies": {
+    "classnames": ">=2.2.6",
+    "lodash": ">=4.0.0",
     "react": ">=16.4.1",
     "react-dom": ">=16.4.1",
     "react-redux": ">=5.0.7",
@@ -27,12 +29,17 @@
     "reselect": ">=3.0.0"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^3.4.8",
+    "@storybook/cli": "^3.4.8",
+    "@storybook/react": "^3.4.8",
+    "autoprefixer": "^8.6.4",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.5",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "classnames": "^2.2.6",
     "copy": "^0.3.2",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
@@ -44,7 +51,9 @@
     "eslint-plugin-standard": "^3.1.0",
     "mkdirp": "^0.5.1",
     "postcss-modules": "^1.1.0",
+    "postcss-nested": "^3.0.0",
     "postcss-syntax": "^0.31.0",
+    "precss": "^3.1.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
