--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,8 @@
   "env": {
     "development": {},
     "production": {},
-    "test": {},
+    "test": {
+      "presets": ["env", "stage-0", "react"]
+    },
   },
 }
