--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "`# Build our code for publishing` rollup -c && copy package.json dist",
     "storybook": "`# Sample component integration` start-storybook -p 9001 -c .storybook",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config .jest.config.js"
   },
   "repository": {
     "type": "git",
@@ -49,6 +49,7 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
+    "jest": "^23.3.0",
     "mkdirp": "^0.5.1",
     "postcss-modules": "^1.1.0",
     "postcss-nested": "^3.0.0",
