--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "`# Build our code for publishing` rimraf dist && rollup -c && copy package.json dist",
     "storybook": "`# Sample code usage` start-storybook -p 9001 -c .storybook",
     "start": "`# Run storybook until we get a more start appropriate start script` npm run storybook",
-    "test": "jest --config .jest.config.js"
+    "test": "jest --config .jest.config.js src"
   },
   "repository": {
     "type": "git",
